--- a/style.css
+++ b/style.css
@@ -9,3 +9,14 @@ body {
 h1 {
     background-color: white;
 }
+.cabeçalho_menu-hamburguer {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    background-image: url("../img/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.container__imagem {
+    padding: 1em;
+}
