--- a/style.css
+++ b/style.css
@@ -1,22 +1,10 @@
+@import url("styles/header.css");
+
 :root {
     --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
 }
 
 body {
     background-color: var(--cor-de-fundo);
-}
-
-h1 {
-    background-color: white;
-}
-.cabeçalho_menu-hamburguer {
-    width: 24px;
-    height: 24px;
-    display: inline-block;
-    background-image: url("../img/Menu.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.container__imagem {
-    padding: 1em;
 }
